VISTA-3449 revert wrong changes